# Synthetic-MT-Python

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/plans/: 2026-03-24-synthetic-mt-ddd-refactoring.md
docs/plots/: test_report.md
docs/superpowers/specs/: 2026-03-24-synthetic-mt-refactoring-design.md
examples/: example_1d_mt_synthetic.py  example_1d_mt_workflow.py  test_synthetic.py
examples/mt_workflow/: __init__.py  config.py  forward_1d.py  gui.py  gui_simple.py  gui_workflow.py  main.py  model_1d.py  processor.py  synthesizer.py  validator.py
examples/mt_workflow/backend/: __init__.py  api.py  core.py  test_full_pipeline.py  verify_all.py
output/: Test.csv  Test.txt
src/: __init__.py  cli.py  gui.py  phoenix.py  synthetic_mt.py
src/application/: __init__.py  dto.py
src/domain/: __init__.py  entities.py
src/domain/services/: __init__.py  synthesis.py
src/infrastructure/: __init__.py
src/infrastructure/io/: __init__.py
src/infrastructure/io/modem/: __init__.py  reader.py
src/infrastructure/io/output/: __init__.py  numpy_io.py
src/infrastructure/io/phoenix/: __init__.py  tbl.py
src/presentation/: __init__.py  gui.py
src/synthetic_mt/: __init__.py  compat.py
src/synthetic_mt/application/: __init__.py  synthesis_use_case.py
src/synthetic_mt/domain/: __init__.py  value_objects.py
src/synthetic_mt/domain/services/: __init__.py  calibration.py  noise.py  synthesis.py
src/synthetic_mt/infrastructure/: __init__.py
src/synthetic_mt/presentation/: __init__.py  cli.py
tests/: __init__.py  test_synthetic_mt.py
(+11 files in other folders)
